# simple-discord-bot

./: keep_alive.py  main.py  music.py  pyproject.toml  readme.md
