[tool.poetry]
name = "semester-break"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
flask = "^1.1.2"
youtube_dl = "^2021.6.6"
ffmpeg = "^1.4"
PyNaCl = "^1.4.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
